<resources>
    <string name="app_name">MoeCleaner</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_home">Home</string>
    <string name="title_junk_clean">Junk File Clean</string>
    <string name="title_memory_boost">Memory Boost</string>
    <string name="title_system_info">System Information</string>

    <string name="text_storage_usage">Storage Usage</string>
    <string name="text_memory_usage">Memory</string>
    <string name="text_cpu_usage">CPU</string>

    <string name="toast_press_back_once_again_to_exit">Press back once again to exit</string>
    <string name="title_cpu_frequency">CPU Frequency</string>
    <string name="title_memory_usage">Memory Usage</string>

    <string name="item_phone_model">Device Model</string>
    <string name="item_screen_resolution">Screen Resolution</string>
    <string name="item_android_version">Android Version</string>
    <string name="item_imei_or_meid">IMEI or MEID</string>
    <string name="item_wlan_mac">WLAN MAC Address</string>
    <string name="item_cpu_model">CPU Model</string>
    <string name="item_cpu_cores">Cores</string>
    <string name="item_clock_range">Clock Range</string>
    <string name="item_memory_size">RAM Size</string>

    <string name="title_basic_information">Basic Information</string>
    <string name="title_cpu_mem_information">CPU &#38; RAM Information</string>
    <string name="title_gpu_information">GPU Information</string>

    <string name="text_can_clean_cache">Cache Size: </string>
    <string name="text_scan_cache">Scan Cache File</string>
    <string name="text_clean_cache">Clean Cache File!</string>
    <string name="text_clean_cache_finish">Cache Cleaned!</string>

    <string name="text_can_clean_mem">Memory: </string>
    <string name="text_scan_mem">Scan Memory</string>
    <string name="text_clean_mem">Memory Boost!</string>
    <string name="text_clean_mem_finish">Memory Boost Finished!</string>

    <string name="toast_need_storage_permission">%1$s need permission to read/write file system.</string>
    <string name="text_can_clean">Can clean:</string>
    <string name="text_clean">Clean cache</string>
    <string name="text_scan">Scan Cache File</string>
</resources>
