<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/clean_status"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_can_clean_cache"
            android:layout_marginRight="16dp"
            android:id="@+id/textView23"
            android:layout_alignTop="@+id/cache_size_text"
            android:layout_toLeftOf="@+id/cache_size_text"
            android:layout_toStartOf="@+id/cache_size_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/cache_size_text"
            android:textSize="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/clean_status"
        android:id="@+id/clean_btn_parent"
        android:visibility="visible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_scan_cache"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clean_cache"
        android:id="@+id/button2"
        android:layout_below="@+id/clean_btn_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:visibility="gone" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/package_cache_list"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:visibility="visible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_current"
        android:padding="8dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:visibility="gone" />

</RelativeLayout>